[package]
name = "tiny"
version = "0.1.0"
authors = ["Daniel Wiberg <daniel@skillster.se>"]
build = "build.rs"


[dependencies]
libc = "0.2.17"
image = "0.18.0"

[target.'cfg(not(windows))'.dependencies]
glutin = "0.14.0"

[target.'cfg(windows)'.dependencies]
winapi  = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"
shell32-sys = "0.1.2"
gdi32-sys = "0.2.0"

[build-dependencies]
gl_generator = "0.9.0"
image = "0.18.0"
